--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 copyright" style="color: #fff; font-size: 1.3rem;">
-                    Copyright &copy; 2024 Laporan PKL.
+                    Copyright &copy; 2024 Laporan PKL Magang Ubig.
                 </div>
             </div>
         </div>
