--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </div>
                     <div class="testimonial-text">
                         <h3>Ahmad Fauzan Arif</h3>
-                        <h4>Wakil Direktur Utama</h4>
+                        <h4>Pembina Magang</h4>
                     </div>
                 </div>
                 <div class="testimonial-item row align-items-center">
@@ -158,7 +158,7 @@
                     </div>
                     <div class="testimonial-text">
                         <h3>Erik Setiadi</h3>
-                        <h4>Karyawan</h4>
+                        <h4>Devisi Produksi</h4>
                     </div>
                 </div>
                 <div class="testimonial-item row align-items-center">
@@ -166,8 +166,8 @@
                         <img src="./images/wili.jpg" alt="Testimonial image">
                     </div>
                     <div class="testimonial-text">
-                        <h3>Willie </h3>
-                        <h4>Karyawan</h4>
+                        <h3>Wili Sandi Febriantana</h3>
+                        <h4>Devisi Produksi</h4>
                     </div>
                 </div>
                 <div class="testimonial-item row align-items-center">
@@ -175,8 +175,8 @@
                         <img src="./images/bayu.jpg" alt="Testimonial image">
                     </div>
                     <div class="testimonial-text">
-                        <h3>Bayu</h3>
-                        <h4>Karyawan</h4>
+                        <h3>Bayu Ramadhan</h3>
+                        <h4>Devisi Produksi</h4>
                     </div>
                 </div>
                 <div class="testimonial-item row align-items-center">
@@ -184,8 +184,8 @@
                         <img src="./images/sasi.jpeg" alt="Testimonial image">
                     </div>
                     <div class="testimonial-text">
-                        <h3>Sasi Kanti</h3>
-                        <h4>Karyawan</h4>
+                        <h3>Sasi Kanti Rahayu</h3>
+                        <h4>Devisi Pemasaran</h4>
                     </div>
                 </div>
             </div>
@@ -204,10 +204,10 @@
                 </p>
             </div>
             <div class="owl-carousel clients-carousel">
-                <img src="./images/image.png" alt="Client Logo">
-                <img src="./images/image.png" alt="Client Logo">
-                <img src="./images/image.png" alt="Client Logo">
-                <img src="./images/image.png" alt="Client Logo">
+                <img src="./images/laporan-aris.jpeg" alt="Client Logo">
+                <img src="./images/lapoaran-azhar.jpeg" alt="Client Logo">
+                <img src="./images/laporan-fara.jpeg" alt="Client Logo">
+                <img src="./images/laporan-keysa.jpeg" alt="Client Logo">
                 <img src="./images/image.png" alt="Client Logo">
                 <img src="./images/image.png" alt="Client Logo">
                 <img src="./images/image.png" alt="Client Logo">
@@ -235,7 +235,7 @@
                 </div>
                 <div class="info">
                     <h3>Moch Aris Rofii</h3>
-                    <span>Fullstack Web Dev</span>
+                    <span>Web Dev</span>
                     <div class="icons">
                         <a href="https://www.facebook.com/profile.php?id=61558868825793" target="_blank"
                             class="fab fa-facebook-f"></a>
@@ -254,7 +254,7 @@
                 </div>
                 <div class="info">
                     <h3>Azhar Zakaria Bintang</h3>
-                    <span>Fullstack Web Dev</span>
+                    <span>Aplikasi Mobile App</span>
                     <div class="icons">
                         <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                         <a href="https://github.com/MochArisRofii" target="_blank"><i
@@ -272,7 +272,7 @@
                 </div>
                 <div class="info">
                     <h3>Fara Azzura Dasgupta</h3>
-                    <span>Frontend Dev</span>
+                    <span>Fronted & Digital Marketing</span>
                     <div class="icons">
                         <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                         <a href="https://github.com/farraazzura" target="_blank"><i
@@ -290,7 +290,7 @@
                 </div>
                 <div class="info">
                     <h3>Keysa Ghea </h3>
-                    <span>Promosi NOBOX.AI</span>
+                    <span>Digital Marketing</span>
                     <div class="icons">
                         <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                         <a href="https://github.com/kesyaghea" target="_blank"><i
@@ -313,16 +313,7 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3951.750114566968!2d112.61655497405192!3d-7.9211491788571875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e78820f3c402d5f%3A0x4e18acbe52d7454b!2sPT%20Universal%20Big%20Data%20(UBIG)!5e0!3m2!1sid!2sid!4v1717403347744!5m2!1sid!2sid"
                 width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-        <div class="contact-form">
-            <form action="./contactme.php" method="POST">
-                <input type="text" name="name" placeholder="Name" class="contact-form-txt" required>
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required placeholder="Contact number"
-                    maxlength="10" class="contact-form-phone">
-                <input type="email" name="email" placeholder="Email" class="contact-form-email" required>
-                <textarea placeholder="Your Message" name="message" class="contact-form-txtarea" required></textarea>
-                <input type="submit" value="Submit" name="submit" class="contact-form-btn">
-            </form>
-        </div>
+        
     </div>
 
     <div class="footer">
