--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <div class="container">
             <div class="row">
                 <div class="section-head-1 col-sm-12" style="text-align: center;">
-                    <h4 style="margin-top: -5rem;" id="portfolio"><span>Our</span> Projects</h4>
+                    <h4 style="margin-top: -5rem;" id="portfolio"><span>Project</span> Kami</h4>
 
-                    <p>The objective of IT Company is to enable a large number of youth to take up <br>industry-relevant
+                    <p><br>industry-relevant
                         skill training that will help them<br> in securing a better livelihood.
                     </p>
                 </div>
@@ -257,7 +257,7 @@
                     <span>Aplikasi Mobile App</span>
                     <div class="icons">
                         <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
-                        <a href="https://github.com/MochArisRofii" target="_blank"><i
+                        <a href="https://github.com/zharzx" target="_blank"><i
                                 class="fa fa-brands fa-github"></i></a>
                         <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
                         <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
