--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <div class="section-head-1 col-sm-12" style="text-align: center;">
                     <h4 style="margin-top: -5rem;" id="portfolio"><span>Project</span> Kami</h4>
 
-                    <p><br>industry-relevant
-                        skill training that will help them<br> in securing a better livelihood.
+                    <p><br>Selama Magang Di PT UBIG <br> Kami BerEmpat Mengerjakan Project Di Tempat Magang Kami. Untuk
+                        Lebih Detail Nya Silahkan Klik Nama Kami Di Bawah
                     </p>
                 </div>
 
@@ -199,7 +199,8 @@
                 <p>
                     Setiap hari di PT Ubig dimulai dengan scan sidik jari, dilanjutkan dengan kebersamaan membaca Surat
                     Yasin pada pukul 07.30. Setelah itu, kami melanjutkan dengan sesi hafalan bersama teman sebelah.
-                    Dan Setelah Itu Dengan semangat dan dedikasi, kami kemudian fokus Mengerjakan proyek masing-masing. Berikut adalah
+                    Dan Setelah Itu Dengan semangat dan dedikasi, kami kemudian fokus Mengerjakan proyek masing-masing.
+                    Berikut adalah
                     Momen Kami Saat Magang.
                 </p>
             </div>
@@ -257,8 +258,7 @@
                     <span>Aplikasi Mobile App</span>
                     <div class="icons">
                         <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
-                        <a href="https://github.com/zharzx" target="_blank"><i
-                                class="fa fa-brands fa-github"></i></a>
+                        <a href="https://github.com/zharzx" target="_blank"><i class="fa fa-brands fa-github"></i></a>
                         <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
                         <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
                     </div>
@@ -313,7 +313,7 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3951.750114566968!2d112.61655497405192!3d-7.9211491788571875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e78820f3c402d5f%3A0x4e18acbe52d7454b!2sPT%20Universal%20Big%20Data%20(UBIG)!5e0!3m2!1sid!2sid!4v1717403347744!5m2!1sid!2sid"
                 width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-        
+
     </div>
 
     <div class="footer">
