--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar">
             <ul>
                 <li><a href="#home">home</a></li>
-                <li><a href="#about">about</a></li>
+                <li><a href="#about">Project</a></li>
                 <li><a href="#team">team</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
@@ -257,10 +257,11 @@
                     <h3>Azhar Zakaria Bintang</h3>
                     <span>Aplikasi Mobile App</span>
                     <div class="icons">
-                        <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
+                        <a href="https://www.youtube.com/@Azharzakariabintang/videos" class="fab fa-youtube"></a>
                         <a href="https://github.com/zharzx" target="_blank"><i class="fa fa-brands fa-github"></i></a>
-                        <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
+                        <a href="https://www.instagram.com/zharnxl/" class="fab fa-instagram"></a>
                         <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
+
                     </div>
                 </div>
             </div>
