--- a/index.html
+++ b/index.html
@@ -67,26 +67,33 @@
                     </p>
                 </div>
 
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-md-3 col-sm-4">
 
-                    <div class="item"> <span class="icon feature_box_col_four"><i class="fa fa-database"></i></span>
-                        <h6>Project-1</h6>
+                    <div class="item"> <span class="icon feature_box_col_four"><i class="fa fa-user"></i></span>
+                        <h6>Moch Aris Rofii</h6>
 
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor
                             Aenean massa.<br><br><br></p>
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-sm-6">
-                    <div class="item"> <span class="icon feature_box_col_five"><i class="fa fa-upload"></i></span>
-                        <h6>Project-2</h6>
+                <div class="col-md-3 col-sm-4">
+                    <div class="item"> <span class="icon feature_box_col_five"><i class="fa fa-user"></i></span>
+                        <h6>Azhar Zakaria Bintang</h6>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor
                             Aenean massa.<br><br><br></p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="item"> <span class="icon feature_box_col_six"><i class="fa fa-camera"></i></span>
-                        <h6>Project-3</h6>
+                <div class="col-md-3 col-sm-4">
+                    <div class="item"> <span class="icon feature_box_col_six"><i class="fa fa-user"></i></span>
+                        <h6>Fara Azzura Dasgupta</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor
+                            Aenean massa.<br><br><br></p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4">
+                    <div class="item"> <span class="icon feature_box_col_six"><i class="fa fa-user"></i></span>
+                        <h6>Keysa Ghea</h6>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor
                             Aenean massa.<br><br><br></p>
                     </div>
@@ -197,10 +204,9 @@
             <div class="section-header">
                 <h2>Kegiatan Sehari Hari</h2>
                 <p>
-                    Setiap hari di PT Ubig dimulai dengan scan sidik jari, dilanjutkan dengan kebersamaan membaca Surat
-                    Yasin pada pukul 07.30. Setelah itu, kami melanjutkan dengan sesi hafalan bersama teman sebelah.
-                    Dan Setelah Itu Dengan semangat dan dedikasi, kami kemudian fokus Mengerjakan proyek masing-masing.
-                    Berikut adalah
+                    Setiap Hari Di PT Ubig Dimulai Dengan Scan Sidik Jari, Dilanjutkan Dengan Membaca Surat Yasin
+                    Bersama-sama Pada Pukul 07.30. Setelah Itu, Kami Melanjutkan Dengan Sesi Hafalan Bersama Teman. Lalu
+                    Dengan Semangat Dan Dedikasi, Kami Kemudian Fokus Mengerjakan Proyek Masing-Masing. Berikut Adalah
                     Momen Kami Saat Magang.
                 </p>
             </div>
@@ -238,12 +244,10 @@
                     <h3>Moch Aris Rofii</h3>
                     <span>Web Dev</span>
                     <div class="icons">
-                        <a href="https://www.facebook.com/profile.php?id=61558868825793" target="_blank"
-                            class="fab fa-facebook-f"></a>
-                        <a href="https://github.com/MochArisRofii" target="_blank"><i
-                                class="fa fa-brands fa-github"></i></a>
+                        <!-- <a href="https://www.facebook.com/profile.php?id=61558868825793" target="_blank" class="fab fa-facebook-f"></a> -->
                         <a href="https://www.instagram.com/morisfii_317/" target="_blank" class="fab fa-instagram"></a>
-                        <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
+                        <a href="https://www.youtube.com/@09.mocharisrofii32" class="fab fa-youtube"></a>
+                        <a href="https://github.com/MochArisRofii" target="_blank"><i class="fa fa-brands fa-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -257,10 +261,10 @@
                     <h3>Azhar Zakaria Bintang</h3>
                     <span>Aplikasi Mobile App</span>
                     <div class="icons">
-                        <a href="https://www.youtube.com/@Azharzakariabintang/videos" class="fab fa-youtube"></a>
-                        <a href="https://github.com/zharzx" target="_blank"><i class="fa fa-brands fa-github"></i></a>
                         <a href="https://www.instagram.com/zharnxl/" class="fab fa-instagram"></a>
-                        <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
+                        <a href="https://www.youtube.com/@Azharzakariabintang/videos" class="fab fa-youtube"></a>
+                        <!-- <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a> -->
+                        <a href="https://github.com/zharzx" target="_blank"><i class="fa fa-brands fa-github"></i></a>
 
                     </div>
                 </div>
@@ -273,13 +277,12 @@
                 </div>
                 <div class="info">
                     <h3>Fara Azzura Dasgupta</h3>
-                    <span>Fronted & Digital Marketing</span>
+                    <span>Frontend & Digital Marketing</span>
                     <div class="icons">
-                        <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
-                        <a href="https://github.com/farraazzura" target="_blank"><i
-                                class="fa fa-brands fa-github"></i></a>
+                        <!-- <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a> -->
                         <a href="https://www.instagram.com/fazuraa_d/" class="fab fa-instagram"></a>
-                        <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
+                        <a href="https://www.youtube.com/@faraazzura" class="fab fa-youtube"></a>
+                        <a href="https://github.com/farraazzura" target="_blank"><i class="fa fa-brands fa-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -293,11 +296,10 @@
                     <h3>Keysa Ghea </h3>
                     <span>Digital Marketing</span>
                     <div class="icons">
-                        <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
-                        <a href="https://github.com/kesyaghea" target="_blank"><i
-                                class="fa fa-brands fa-github"></i></a>
+                        <!-- <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a> -->
                         <a href="https://www.instagram.com/ghea_keysaa/" class="fab fa-instagram"></a>
-                        <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
+                        <a href="https://www.youtube.com/@kysfra1411" class="fab fa-youtube"></a>
+                        <a href="https://github.com/kesyaghea" target="_blank"><i class="fa fa-brands fa-github"></i></a>
                     </div>
                 </div>
             </div>
