--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
             <ul>
                 <li><a href="#home">home</a></li>
                 <li><a href="#about">Project</a></li>
+                <li><a href="organisasi.html">Organisasi</a></li>
                 <li><a href="#team">team</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
@@ -246,6 +247,8 @@
         </div>
     </section>
 
+    <!-- <section id="organisasi"></section>
+
     <div class="testimonials mt-100">
         <div class="container">
             <div class="section-header" style="text-align: center;">
@@ -309,7 +312,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="clients mt-100">
         <div class="container">
