--- a/organisasi.html
+++ b/organisasi.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Laporan PKL</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <!-- <link rel="stylesheet" href="./css/style.css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link rel="icon" href="./images/ubig1.png">
@@ -21,93 +21,56 @@
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
   <script src="./js/main.js"></script>
+  <link rel="stylesheet" href="cs.css">
 
 </head>
 
 <body>
   <header class="header" style="background: linear-gradient(to left, #ff0000, #8b0000, #000000)">
     <a href="#" class="logo"><img src="./images/ubig.png" alt=""></a>
-    <div class="fas fa-bars"></div>
     <nav class="navbar">
       <ul>
-        <li><a href="#home">home</a></li>
+        <li><a href="index.html#home">Home</a></li>
         <li><a href="index.html#about">Project</a></li>
-        <!-- <li><a href="#organisasi">Organisasi</a></li> -->
-        <li><a href="index.html#team">team</a></li>
-        <li><a href="#contact">contact</a></li>
+        <li><a href="index.html#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-    crossorigin="anonymous"></script>
-
-
-  <div class="testimonials mt-100" style="padding-bottom: 100%;">
-    <div class="container">
-      <div class="section-header" style="text-align: center;">
-        <h2 style="margin-top: -15rem;">Struktur Organisasi</h2>
+  <div class="org-chart">
+    <div class="level">
+      <div class="position">
+        <img src="./images/fatkulamri.jpg" alt="Vice President 1">
+        <div class="title">Direktur Utama</div>
+        <div class="name">Fatkul Amri</div>
       </div>
-
-      <div class="owl-carousel testimonials-carousel">
-        <div class="testimonial-item row align-items-center">
-          <div class="testimonial-img">
-            <img src="./images/fatkulamri.jpg" style="width: 25rem; height: auto;" alt="Testimonial image">
-          </div>
-          <div class="testimonial-text">
-            <h3>Fatkul Amri</h3>
-            <h4>Direktur Utama</h4>
-          </div>
-        </div>
-        <div class="testimonial-item row align-items-center">
-          <div class="testimonial-img">
-            <img src="./images/fauzanarif.jpg" alt="Testimonial image">
-          </div>
-          <div class="testimonial-text">
-            <h3>Ahmad Fauzan Arif</h3>
-            <h4>Pembina Magang</h4>
-          </div>
-        </div>
-        <div class="testimonial-item row align-items-center">
-          <div class="testimonial-img">
-            <img src="./images/erik setiaji.jpg" alt="Testimonial image">
-          </div>
-          <div class="testimonial-text">
-            <h3>Erik Setiadi</h3>
-            <h4>Devisi Produksi</h4>
-          </div>
-        </div>
-        <div class="testimonial-item row align-items-center">
-          <div class="testimonial-img">
-            <img src="./images/wili.jpg" alt="Testimonial image">
-          </div>
-          <div class="testimonial-text">
-            <h3>Wili Sandi Febriantana</h3>
-            <h4>Devisi Produksi</h4>
-          </div>
-        </div>
-        <div class="testimonial-item row align-items-center">
-          <div class="testimonial-img">
-            <img src="./images/bayu.jpg" alt="Testimonial image">
-          </div>
-          <div class="testimonial-text">
-            <h3>Bayu Ramadhan</h3>
-            <h4>Devisi Produksi</h4>
-          </div>
-        </div>
-        <div class="testimonial-item row align-items-center">
-          <div class="testimonial-img">
-            <img src="./images/sasi.jpeg" alt="Testimonial image">
-          </div>
-          <div class="testimonial-text">
-            <h3>Sasi Kanti Rahayu</h3>
-            <h4>Devisi Pemasaran</h4>
-          </div>
-        </div>
+      <div class="position">
+        <img src="./images/fauzanarif.jpg" alt="Vice President 2">
+        <div class="title">Pembina Magang</div>
+        <div class="name">Ahmad Fauzan Arif</div>
+      </div>
+    </div>
+    <div class="level">
+      <div class="position">
+        <img src="./images/erik setiaji.jpg" alt="Karyawan 1">
+        <div class="title">Devisi Produksi</div>
+        <div class="name">Erik Setiadi</div>
+      </div>
+      <div class="position">
+        <img src="./images/bayu.jpg" alt="Karyawan 2">
+        <div class="title">Devisi Produksi</div>
+        <div class="name">Bayu Ramadhan</div>
+      </div>
+      <div class="position">
+        <img src="./images/wili.jpg" alt="Karyawan 3">
+        <div class="title">Devisi Produksi</div>
+        <div class="name">Wili Sandi Febriantana</div>
+      </div>
+      <div class="position">
+        <img src="./images/sasi.jpeg" alt="Karyawan 4">
+        <div class="title">Devisi Pemasaran</div>
+        <div class="name">Sasi Kanti</div>
       </div>
     </div>
   </div>
@@ -119,6 +82,8 @@
   <script src="lib/counterup/counterup.min.js"></script>
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="lib/lightbox/js/lightbox.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
